metadata-retriever/metadata/objects/Customer_Dealer_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Person Account, Company</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Relationships</relationshipLabel>
        <relationshipName>Dealer_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_No__c</fullName>
        <label>Dealer No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Relationships</relationshipLabel>
        <relationshipName>Customer_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LDCL_Cust_Dealer_Id__c</fullName>
        <externalId>true</externalId>
        <label>LDCL Cust Dealer Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Person_Id__c</fullName>
        <label>Sales Person Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Customer Dealer Relationship</label>
    <nameField>
        <displayFormat>CDR-{00000000}</displayFormat>
        <label>Customer Dealer Rel No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Dealer Relationship</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>